--- a/1.4 vSphere Components.md
+++ b/1.4 vSphere Components.md
@@ -1,5 +1,7 @@
 # Questions
-1. 
+1. What is ESXi and vCenter Server?
+2. What are the vSphere componenets?
+3. What ports are used in vSphere communication? 
 
 # Evidence
 ## ESXi and vCenter Server
@@ -13,6 +15,9 @@
 2. vCenter Server
     1. Software component that manages ESXi hosts and their resources.
     2. Deployed as virtual appliance on ESXi.
+    3. virtual provisioning X daemon == vpxd is the main process of vCenter Server
+        1. vpxd used to manage multiple ESXi hosts.
+        2. vCenter Server installs a vpxa agent on each ESXi it manages.    
 3. VM
     1. Software representation of physical computer and components.
 4. ESXi
@@ -28,3 +33,13 @@
     1. Types:
         1. Storage devices that are connected through network
         2. Storage devices that are directly attached to ESXi hosts.
+
+## vSphere Communication Ports
+1. vSphere Client with vCenter Server
+    1. TCP 443
+2. vCenter Server Management Interface with vCenter Server
+    1. TCP 5480
+3. vpxd with vpxa
+    1. TCP/UDP 902
+4. VMware Host Client with ESXi hosts
+    1. TCP/UDP 902
